[package]
name = "network-types"
version = "0.1.0"
description = "Rust structs representing network-related types in Linux."
keywords = ["linux", "network", "osi", "packet", "headers"]
license = "MIT"
authors = ["Michal Rostecki <vadorovsky@gmail.com>"]
repository = "https://github.com/vadorovsky/network-types"
readme = "README.md"
edition = "2024"

[dependencies]
num-derive = { version = "0.4.2", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
wincode = { version = "0.4.4", optional = true, default-features = false, features = ["derive"] }

[dev-dependencies]
anyhow = { version = "1.0.101", default-features = false }
assert_matches = { version = "1.5.0", default-features = false }
aya-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
proptest = { version = "1.9.0", default-features = false, features = ["std"] }

[features]
default = ["wincode"]
wincode = ["dep:wincode"]
