[package]
name = "network-types"
version = "0.2.0"
description = "Rust structs representing network-related types in Linux."
keywords = ["linux", "network", "osi", "packet", "headers"]
license = "MIT"
authors = ["Michal Rostecki <vad.sol@proton.me>"]
repository = "https://github.com/vadorovsky/network-types"
readme = "README.md"
edition = "2024"

[dependencies]
num-derive = { version = "0.4.2", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
wincode = { version = "0.4.4", optional = true, default-features = false, features = ["derive"] }

[dev-dependencies]
assert_matches = { version = "1.5.0", default-features = false }
aya-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
proptest = { version = "1.9.0", default-features = false, features = ["std"] }

[features]
default = ["wincode"]
wincode = ["dep:wincode"]
